--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     "@mui/icons-material": "^6.1.2",
     "@mui/material": "^6.1.2",
     "@next/env": "^14.2.14",
+    "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
     "cookies-next": "^4.2.1",
     "fs": "^0.0.1-security",
+    "mapbox-gl": "^3.7.0",
     "next": "14.2.14",
     "next-intl": "^3.20.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@types/node": "^20",
