--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cypress": "cypress open",
+    "test:e2e": "cypress run"
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
@@ -27,9 +29,11 @@
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "cypress": "^13.15.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
     "postcss": "^8",
