--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "cypress": "cypress open",
-    "test:e2e": "cypress run"
+    "test:e2e": "cypress run",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
@@ -23,6 +24,7 @@
     "mapbox-gl": "^3.7.0",
     "next": "14.2.14",
     "next-intl": "^3.20.0",
+    "next-sitemap": "^4.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
