changing the name of ci/cd job

--- a/.github/workflows/vercel.yml
+++ b/.github/workflows/vercel.yml
@@ -9,7 +9,7 @@ on:
       - main
 
 jobs:
-  Test-and-Deploy:
+  Deployment:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
