--- a/package.json
+++ b/package.json
@@ -17,8 +17,6 @@
     "@mui/icons-material": "^6.1.2",
     "@mui/material": "^6.1.2",
     "@next/env": "^14.2.14",
-    "@reduxjs/toolkit": "^2.2.7",
-    "axios": "^1.7.7",
     "cookies-next": "^4.2.1",
     "fs": "^0.0.1-security",
     "mapbox-gl": "^3.7.0",
@@ -27,8 +25,7 @@
     "next-sitemap": "^4.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-hot-toast": "^2.4.1",
-    "react-redux": "^9.1.2"
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
     "@types/jest": "^29.5.13",
